--- a/Rock.JavaScript/src/streamchat/styles/main.scss
+++ b/Rock.JavaScript/src/streamchat/styles/main.scss
@@ -1,5 +1,6 @@
 // Themes
 @use 'themes/community/community.scss';
+@use 'themes/conversational/conversational.scss';
 
 // Components
 @use 'components/components.scss';
