--- a/Rock.JavaScript/src/streamchat/styles/main.css
+++ b/Rock.JavaScript/src/streamchat/styles/main.css
@@ -984,6 +984,14 @@
 .rocktheme-community {
   /* bc todo: look into what this is for */
 }
+.rocktheme-community .str-chat__send-to-channel-checkbox__field label {
+  margin-bottom: 0;
+}
+.rocktheme-community .str-chat__send-to-channel-checkbox__container {
+  margin-inline: var(--message-composer-margin-inline);
+  margin-right: var(--message-composer-margin-right);
+  padding: 0;
+}
 .rocktheme-community .rock-message-composer {
   display: flex;
   flex-direction: column;
@@ -1061,6 +1069,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--message-composer-gap);
+}
+.rocktheme-community .rock-community-message-input div[role=presentation] {
+  width: 100%;
 }
 .rocktheme-community .rock-message-input-container {
   display: flex;
