--- a/Rock.JavaScript/src/streamchat/styles/components/_message-composer.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_message-composer.scss
@@ -2,12 +2,28 @@
 
     .str-chat__send-to-channel-checkbox__field label {
         margin-bottom: 0;
+        color: var(--color-interface-medium);
+        font-weight: 500;
     }
 
     .str-chat__send-to-channel-checkbox__container {
         margin-inline: var(--message-composer-margin-inline);
         margin-right: var(--message-composer-margin-right);
+        margin-bottom: 2px;
         padding: 0;
+    }
+
+    .str-chat__message-input {
+        padding: 0;
+        align-items: start;
+    }
+
+    .str-chat__send-to-channel-checkbox__container {
+        padding: 0;
+    }
+
+    input#send-to-channel-checkbox {
+        accent-color: var(--color-interface-medium);
     }
 
     .rock-message-composer {
